--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,8 +12,8 @@ services:
       - static-data:/usr/src/app/django_htmx/static
     # Файл содержащий переменные окружения для контейнера
     environment:
-      - DJANGO_ALLOWED_HOSTS=127.0.0.1
-      - CSRF_TRUSTED_ORIGINS=http://127.0.0.1
+      - DJANGO_ALLOWED_HOSTS=dolvioz.ru
+      - CSRF_TRUSTED_ORIGINS=http://dolvioz.ru https://dolvioz.ru
       - CACHES_BACKEND=django.core.cache.backends.memcached.PyMemcacheCache
       - CACHES_LOCATION=memcached:11211
       - INTERNAL_IPS=127.0.0.1
