--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -51,12 +51,25 @@ services:
     build: ./nginx
     volumes:
       - static-data:/usr/src/app/django_htmx/static
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     # Пробрасываем 80 порт контейнера на 80 порт локальной машины(порт будет доступен из вне)
     ports:
       - 80:80
+      - 443:443
     # Дожидаемся запуска контейнера web
     depends_on:
       - web
+
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    command: certonly --webroot --webroot-path=/var/www/certbot/ --email dolvioz@email --agree-tos --no-eff-email -d dolvioz.ru -d www.dolvioz.ru
+    depends_on:
+      - nginx
 
 volumes:
   # Объявляем том postgres-data для хранения данных PostgreSQL
