--- a/nginx/htmx_book.conf
+++ b/nginx/htmx_book.conf
@@ -23,4 +23,8 @@ server {
     location /static/ {
         alias /usr/src/app/django_htmx/static/;
     }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 }
