--- a/nginx/htmx_book.conf
+++ b/nginx/htmx_book.conf
@@ -5,26 +5,44 @@ upstream htmx_book {
 
 server {
     listen 80;
-    # Ваш домен
     server_name dolvioz.ru;
-    # Параметры проксирования
-    location / {
-        # Если будет открыта корневая страница
-        # все запросу пойдут к одному из серверов
-        # в upstream htmx_book
-        proxy_pass http://htmx_book;
-        # Устанавливаем заголовки
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        # Отключаем перенаправление
-        proxy_redirect off;
-    }
-    # подключаем статические файлы
-    location /static/ {
-        alias /usr/src/app/django_htmx/static/;
-    }
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name dolvioz.ru;
+
+    ssl_certificate /etc/letsencrypt/live/dolvioz.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dolvioz.ru/privkey.pem;
+
+    client_max_body_size 20M;
+    charset utf-8;
+
+    gzip on;
+    gzip_min_length 1000;
+    gzip_vary on;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types   text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+
+    location / {
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Url-Scheme $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://htmx_book;
+    }
+
+    # подключаем статические файлы
+    location /static/ {
+        alias /usr/src/app/django_htmx/static/;
     }
 }
